финальная версия проекта до ревью

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
           </p>
       </div>
       
-      <div class="header__decorated-text" aria-hidden="true">rec</div>
+      <div class="header__decorated-text" 
+            aria-hidden="true">
+            rec
+      </div>
     </header>
 
     <main class="concentration">
@@ -160,27 +163,42 @@
                 <picture>
                     <source srcset="./images/sunset_avif.avif" type="image/avif">
                     <source srcset="./images/suncet_webp.webp" type="image/webp">
-                    <img src="./images/sunset.png" alt="красивый закат с горами, озером, птицами и ярким солнце">
+                    <img 
+                        src="./images/sunset.png" 
+                        alt="красивый закат с горами, озером, птицами и ярким солнце"
+                        loading="lazy" >
                 </picture>
                 <picture>
                     <source srcset="./images/ice-cream_avif.avif" type="image/avif">
                     <source srcset="./images/ice-cream_webp.webp" type="image/webp">
-                    <img src="./images/ice-cream.png" alt="мороженое с веселыми лицами у шариков">
+                    <img 
+                        src="./images/ice-cream.png" 
+                        alt="мороженое с веселыми лицами у шариков"
+                        loading="lazy">
                 </picture>
                 <picture>
                     <source srcset="./images/tape_avif.avif" type="image/avif">
                     <source srcset="./images/tape_webp.webp" type="image/webp">
-                    <img src="./images/tape.png" alt="старая музыкальная кассета для магнитофона">
+                    <img 
+                        src="./images/tape.png" 
+                        alt="старая музыкальная кассета для магнитофона"
+                        loading="lazy">
                 </picture>
                 <picture>
                     <source srcset="./images/books_avif.avif" type="image/avif">
                     <source srcset="./images/books_webp.webp" type="image/webp">
-                    <img src="./images/books.png" alt="стопка книг">
+                    <img 
+                        src="./images/books.png" 
+                        alt="стопка книг"
+                        loading="lazy">
                 </picture>
                 <picture>
                     <source srcset="./images/street_avif.avif" type="image/avif">
                     <source srcset="./images/street_webp.webp" type="image/webp">
-                    <img src="./images/street.png" alt="закат">
+                    <img 
+                        src="./images/street.png" 
+                        alt="закат"
+                        loading="lazy">
                 </picture>
             </div>
         </section>
