--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
     <main class="concentration">
 
         <section class="reason">
-            <h3 class="subtitle_header">
+            <h2 class="subtitle_header">
                 Почему сосредоточиться так сложно
-            </h3>
+            </h2>
             <article class="reason__descr">
                 <div class="subtitle_description">
-                    <p class="title-decor">
+                    <h3 class="title-decor">
                         Многозадачность
-                    </p>
+                    </h3>
                     <p class="description">
                         Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="description_link" href="#">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
                     </p>
@@ -88,15 +88,15 @@
         </section>
 
         <section class="factors">
-            <h3 class="subtitle_header">
+            <h2 class="subtitle_header">
                 Что снижает концентрацию <br> внимания?
-            </h3>
+            </h2>
             <article class="factors__reason">
                 <div class="factors__reason-description">
                     <div class="subtitle_description">
-                        <p class="title-decor">
+                        <h3 class="title-decor">
                             Многозадачность
-                        </p>
+                        </h3>
                         <p class="description">
                             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
                         </p>
@@ -126,49 +126,49 @@
         </section>
 
         <section class="reason">
-            <h3 class="subtitle_header">
+            <h2 class="subtitle_header">
                 Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
-            </h3>
+            </h2>
             <article class="reason__descr">
-                <p class="title-decor">
+                <h3 class="title-decor">
                     5 простых (на самом деле не очень) советов
-                </p>
+                </h3>
                 <div class="subtitle_description">
-                    <p class="title-decor title-decor_light">
+                    <h4 class="title-decor title-decor_light">
                         Представьте небо и облака
-                    </p>
+                    </h4>
                     <p class="description">
                         Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
                     </p>
                 </div>
                 <div class="subtitle_description">
-                    <p class="title-decor title-decor_light">
+                    <h4 class="title-decor title-decor_light">
                         Включите музыку
-                    </p>
+                    </h4>
                     <p class="description">
                         Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
                     </p>
                 </div>
                 <div class="subtitle_description">
-                    <p class="title-decor title-decor_light">
+                    <h4 class="title-decor title-decor_light">
                         Прогуляйтесь
-                    </p>
+                    </h4>
                     <p class="description">
                         Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="description_link" href="#">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
                     </p>
                 </div>
                 <div class="subtitle_description">
-                    <p class="title-decor title-decor_light">
+                    <h4 class="title-decor title-decor_light">
                         Хорошо ешьте
-                    </p>
+                    </h4>
                     <p class="description">
                         Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
                     </p>
                 </div>
                 <div class="subtitle_description">
-                    <p class="title-decor title-decor_light">
+                    <h4 class="title-decor title-decor_light">
                         Читайте
-                    </p>
+                    </h4>
                     <p class="description">
                         Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
                     </p>
@@ -177,9 +177,9 @@
         </section>
 
         <section class="variants-in-picture">
-            <p class="title-decor">
+            <h2 class="title-decor">
                 А можно в картинках?
-            </p>
+            </h2>
             <article class="variants-in-picture__images">
                 <picture>
                     <source srcset="./images/sunset_avif.avif" type="image/avif">
