--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                     </p>
                 </div>
                 <div class="subtitle_description">
-                        <p class="title-decor">
-                            Дофамин
-                        </p>
-                        <p class="description">
-                            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
-                        </p>
+                    <h3 class="title-decor">
+                        Дофамин
+                    </h3>
+                    <p class="description">
+                        С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+                    </p>
                 </div>
             </article>
         </section>
@@ -104,9 +104,9 @@
                 </div>
                 <div class="factors__reason-description">
                     <div class="subtitle_description">
-                        <p class="title-decor">
+                        <h3 class="title-decor">
                             Еда
-                        </p>
+                        </h3>
                         <p class="description">
                             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
                         </p>
@@ -114,9 +114,9 @@
                 </div>
                 <div class="factors__reason-description">
                     <div class="subtitle_description">
-                        <p class="title-decor">
+                        <h3 class="title-decor">
                             Гаджеты
-                        </p>
+                        </h3>
                         <p class="description">
                             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
                         </p>
